--- a/cube/index.html
+++ b/cube/index.html
@@ -9,6 +9,44 @@
 <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
-Hello world
+	<div id="preload" class="preload"></div>
+  <div class="credit">version 1.0 /u/stripedypaper 2016</div>
+  <div style="font-family:'Source Sans Pro';font-size:0.9em"></div>
+  <div class="backgroundcontainer">
+  <div id="background" class="background"></div>
+  </div>
+  <div id="clickscreen" class="clickscreen"></div>
+  <div id="dragged" class="item icon dragged"></div>
+  <div id="tooltip" class="tooltip">
+    <div id="tooltiptitle" class="tooltiptitle tooltiptext">bla</div>
+    <div id="tooltipdescription" class = "tooltipdescription tooltiptext">bla</div>
+    <div id="tooltipimage" class="tooltipimage"></div>
+    <div id="tooltipcover" class="tooltipcover"></div>
+  </div>
+  <div id="equiptooltip" class="equiptooltip">
+    <div id="equiptooltiptitle" class="tooltiptitle tooltiptext">bla</div>
+    <div id="equiptooltipimage" class="tooltipimage"></div>
+    <div id="equiptooltipcover" class="tooltipcover equiptooltipcover"></div>
+    <div id="equiptooltippot" class="tooltipcover equiptooltippot"></div>
+    <div id="equiptooltiptoptext" class="tooltiptext tooltipdescription equiptooltiptoptext">(Rasre Item)</div>
+    <div id="equiptooltiplevel" class="equiptooltiplevel">120</div>
+    <div id="equiptooltipcategory" class="tooltiptext tooltipdescription equiptooltipcategory">CATEGOdRY: BADGE</div>
+    <div id="equiptooltipnpot" class="equiptooltipnpot">
+      <div id="equiptooltipnpotimg" class="equiptooltipnpotimg"></div>
+      <div id="equiptooltipnpotheading" class="tooltiptext tooltipdescription equiptooltipnpotheading">Potential</div>
+      <div id="equiptooltipnpotlines" class="tooltiptext tooltipdescription equiptooltipnpotlines">STR<br>STR<br>STR</div>
+    </div>
+  </div>
+  <div id ="ui" class="ui">
+    <div id="inventory" class="inventory"></div>
+    <div id="equipment" class="equipment"></div>
+    <div id="cubeWindow" class="cubeWindow">
+      <div id="cubePot" class="tooltiptext tooltipdescription cubePot">center this text</div>
+      <div id="cubeLines" class="tooltiptext tooltipdescription equiptooltipnpotlines cubeLines">test<br>test <br>est</div>
+      <div id="cubeAnimation" class="cubeAnimation"></div>
+      <div id="cubeButtonAgain" class="cubeButtonAgain button2"></div>
+      <div id="cubeButtonOK" class="cubeButtonOK button2"></div>
+    </div>
+  </div>
 </body>
 </html>
