--- a/cube/index.html
+++ b/cube/index.html
@@ -9,8 +9,8 @@
 <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
-	<div id="preload" class="preload"></div>
-  <div class="credit">version 1.0 /u/stripedypaper 2016</div>
+  <div id="preload" class="preload"></div>
+  <div class="credit">version 1.00 stripedypaper 2016</div>
   <div style="font-family:'Source Sans Pro';font-size:0.9em"></div>
   <div class="backgroundcontainer">
   <div id="background" class="background"></div>
