--- a/cube/index.html
+++ b/cube/index.html
@@ -7,6 +7,11 @@
 <script src="main.js"></script>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="favicon.ico" />
+<script>
+    window.addEventListener("DOMContentLoaded", function() {
+        Game.init();
+    }, false);
+</script>
 </head>
 <body>
   <div id="preload" class="preload"></div>
