--- a/cube/index.html
+++ b/cube/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
   <div id="preload" class="preload"></div>
-  <div class="credit">version 1.00 stripedypaper 2016</div>
   <div style="font-family:'Source Sans Pro';font-size:0.9em"></div>
   <div class="backgroundcontainer">
   <div id="background" class="background"></div>
   </div>
   <div id="clickscreen" class="clickscreen"></div>
+  <div class="credit"><a href="https://github.com/stripedypaper/stripedypaper.github.io/tree/master/cube" target="_blank">version 1.01 stripedypaper 2016</a></div>
   <div id="dragged" class="item icon dragged"></div>
   <div id="tooltip" class="tooltip">
     <div id="tooltiptitle" class="tooltiptitle tooltiptext">bla</div>
@@ -41,16 +41,25 @@
       <div id="equiptooltipnpotheading" class="tooltiptext tooltipdescription equiptooltipnpotheading">Potential</div>
       <div id="equiptooltipnpotlines" class="tooltiptext tooltipdescription equiptooltipnpotlines">STR<br>STR<br>STR</div>
     </div>
+    <div id="equiptooltipbpot" class="equiptooltipbpot">
+      <div id="equiptooltipbpotimg" class="equiptooltipnpotimg"></div>
+      <div id="equiptooltipbpotheading" class="tooltiptext tooltipdescription equiptooltipnpotheading">Bonus Potential</div>
+      <div id="equiptooltipbpotlines" class="tooltiptext tooltipdescription equiptooltipnpotlines">STR<br>STR<br>STR</div>
+    </div>
   </div>
   <div id ="ui" class="ui">
     <div id="inventory" class="inventory"></div>
     <div id="equipment" class="equipment"></div>
     <div id="cubeWindow" class="cubeWindow">
       <div id="cubePot" class="tooltiptext tooltipdescription cubePot">center this text</div>
+      <div id="cubePot2" class="tooltiptext tooltipdescription cubePot2">center this text</div>
       <div id="cubeLines" class="tooltiptext tooltipdescription equiptooltipnpotlines cubeLines">test<br>test <br>est</div>
+      <div id="cubeLines2" class="tooltiptext tooltipdescription equiptooltipnpotlines cubeLines2">test<br>test <br>est</div>
       <div id="cubeAnimation" class="cubeAnimation"></div>
       <div id="cubeButtonAgain" class="cubeButtonAgain button2"></div>
       <div id="cubeButtonOK" class="cubeButtonOK button2"></div>
+      <div id="cubeButtonBefore" class="cubeButtonBefore button2"></div>
+      <div id="cubeButtonAfter" class="cubeButtonAfter button2"></div>
     </div>
   </div>
 </body>
