--- a/cube/index.html
+++ b/cube/index.html
@@ -12,6 +12,21 @@
         Game.init();
     }, false);
 </script>
+<script>
+
+  // GOOGLE ANALYTICS
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-83225402-1', 'auto');
+  ga('send', 'pageview');
+
+  // GOOGLE ANALYTICS
+
+</script>
 </head>
 <body>
   <div id="preload" class="preload"></div>
