--- a/cube/index.html
+++ b/cube/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cube Sim</title>
+<title>Maplestory Cube Sim</title>
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
 <script src="P.js"></script>
 <script src="main.js"></script>
 <link href="styles.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="favicon.ico" />
+<link rel="shortcut icon" href="img/favicon.ico" />
 <script>
     window.addEventListener("DOMContentLoaded", function() {
         Game.init();
