--- a/cube/index.html
+++ b/cube/index.html
@@ -35,7 +35,10 @@
   <div id="background" class="background"></div>
   </div>
   <div id="clickscreen" class="clickscreen"></div>
-  <div class="credit"><a href="https://github.com/stripedypaper/stripedypaper.github.io/tree/master/cube" target="_blank">version 1.01 stripedypaper 2016</a></div>
+  <div class="credit">
+  <p>stripedypaper 2016</p>
+  <p><a href="https://github.com/stripedypaper/stripedypaper.github.io/tree/master/cube" target="_blank">Disclaimer</a></p>
+  </div>
   <div id="dragged" class="item icon dragged"></div>
   <div id="tooltip" class="tooltip">
     <div id="tooltiptitle" class="tooltiptitle tooltiptext">bla</div>
@@ -45,9 +48,9 @@
   </div>
   <div id="equiptooltip" class="equiptooltip">
     <div id="equiptooltiptitle" class="tooltiptitle tooltiptext">bla</div>
+    <div id="equiptooltippot" class="tooltipcover equiptooltippot"></div>
     <div id="equiptooltipimage" class="tooltipimage"></div>
     <div id="equiptooltipcover" class="tooltipcover equiptooltipcover"></div>
-    <div id="equiptooltippot" class="tooltipcover equiptooltippot"></div>
     <div id="equiptooltiptoptext" class="tooltiptext tooltipdescription equiptooltiptoptext">(Rasre Item)</div>
     <div id="equiptooltiplevel" class="equiptooltiplevel">120</div>
     <div id="equiptooltipcategory" class="tooltiptext tooltipdescription equiptooltipcategory">CATEGOdRY: BADGE</div>
@@ -65,6 +68,11 @@
   <div id ="ui" class="ui">
     <div id="inventory" class="inventory"></div>
     <div id="equipment" class="equipment"></div>
+    <div id="equipList" class="equipList">
+      <div id="equipListText" class="equipListText">
+        <div class="equipListItem noselect">hello</div>
+      </div>
+    </div>
     <div id="cubeWindow" class="cubeWindow">
       <div id="cubePot" class="tooltiptext tooltipdescription cubePot">center this text</div>
       <div id="cubePot2" class="tooltiptext tooltipdescription cubePot2">center this text</div>
