--- a/cube/index.html
+++ b/cube/index.html
@@ -54,6 +54,12 @@
     <div id="equiptooltiptoptext" class="tooltiptext tooltipdescription equiptooltiptoptext">(Rasre Item)</div>
     <div id="equiptooltiplevel" class="equiptooltiplevel">120</div>
     <div id="equiptooltipcategory" class="tooltiptext tooltipdescription equiptooltipcategory">CATEGOdRY: BADGE</div>
+    <div id="equiptooltipcube1" class="equiptooltipcube1 icon"></div>
+    <div id="equiptooltipcube2" class="equiptooltipcube2 icon"></div>
+    <div id="equiptooltipcube3" class="equiptooltipcube3 icon"></div>
+    <div id="equiptooltipcubetext1" class="tooltiptext tooltipdescription equiptooltipcubetext1">0</div>>
+    <div id="equiptooltipcubetext2" class="tooltiptext tooltipdescription equiptooltipcubetext2">76</div>>
+    <div id="equiptooltipcubetext3" class="tooltiptext tooltipdescription equiptooltipcubetext3">132</div>
     <div id="equiptooltipnpot" class="equiptooltipnpot">
       <div id="equiptooltipnpotimg" class="equiptooltipnpotimg"></div>
       <div id="equiptooltipnpotheading" class="tooltiptext tooltipdescription equiptooltipnpotheading">Potential</div>
@@ -67,7 +73,11 @@
   </div>
   <div id ="ui" class="ui">
     <div id="inventory" class="inventory"></div>
-    <div id="equipment" class="equipment"></div>
+    <div id="equipment" class="equipment">
+      <div id="equiptip" class="equiptip move">
+      Right click an equipped item to change it
+      </div>
+    </div>
     <div id="equipList" class="equipList">
       <div id="equipListText" class="equipListText">
         <div class="equipListItem noselect">hello</div>
