--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 	<p>stripedypaper's projects<br>
 		<br>
-		<a href="/cube/index.html">Maplestory Cube Sim</a></p>
+		<a href="/cube/">Maplestory Cube Sim</a></p>
 </body>
 </html>
