--- a/cube/index.html
+++ b/cube/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Maplestory Cube Sim</title>
+<META NAME="GOOGLEBOT" CONTENT="NOSNIPPET">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
 <script src="P.js"></script>
 <script src="main.js"></script>
