--- a/cube/index.html
+++ b/cube/index.html
@@ -37,7 +37,8 @@
   </div>
   <div id="clickscreen" class="clickscreen"></div>
   <div class="credit">
-  <p>stripedypaper 2016</p>
+  <p>stripedypaper 2016 
+  <a href="https://www.youtube.com/channel/UClHsPQEQPBf45qRvaJ-1x6g"><img src="img/yt-icon.png" height="auto" width="14"></a></p>
   <p><a href="https://github.com/stripedypaper/stripedypaper.github.io/tree/master/cube" target="_blank">Disclaimer</a></p>
   </div>
   <div id="dragged" class="item icon dragged"></div>
