--- a/cube/index.html
+++ b/cube/index.html
@@ -59,8 +59,8 @@
     <div id="equiptooltipcube1" class="equiptooltipcube1 icon"></div>
     <div id="equiptooltipcube2" class="equiptooltipcube2 icon"></div>
     <div id="equiptooltipcube3" class="equiptooltipcube3 icon"></div>
-    <div id="equiptooltipcubetext1" class="tooltiptext tooltipdescription equiptooltipcubetext1">0</div>>
-    <div id="equiptooltipcubetext2" class="tooltiptext tooltipdescription equiptooltipcubetext2">76</div>>
+    <div id="equiptooltipcubetext1" class="tooltiptext tooltipdescription equiptooltipcubetext1">0</div>
+    <div id="equiptooltipcubetext2" class="tooltiptext tooltipdescription equiptooltipcubetext2">76</div>
     <div id="equiptooltipcubetext3" class="tooltiptext tooltipdescription equiptooltipcubetext3">132</div>
     <div id="equiptooltipnpot" class="equiptooltipnpot">
       <div id="equiptooltipnpotimg" class="equiptooltipnpotimg"></div>
