Track NX spent ;)

--- a/cube/index.html
+++ b/cube/index.html
@@ -75,6 +75,7 @@
   </div>
   <div id ="ui" class="ui">
     <div id="inventory" class="inventory"></div>
+    <div id="nxspent" class="nxspent">NX Spent: 0 NX</div>
     <div id="equipment" class="equipment">
       <div id="equiptip" class="equiptip move">
       Right click an equipped item to change it
