--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -2,6 +2,8 @@
     <title>MHW Speedrun Thumbnail Generator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
     <script src="huebee.pkgd.min.js"></script>
+    <script src="html2canvas.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="lodash.min.js"></script>
     <script src="FileSaver.min.js"></script>
     <script src="dom-to-image.min.js"></script>
