--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700,800|Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="huebee.css">
 </head>
-<body ng-app="app" ng-controller="MyController as vm">
+<body ng-app="app" ng-controller="MyController as vm" id="body">
     <div class="flexv">
         <div class="header">MHW Speedrun Thumbnail Generator</div>
         <div class="spacer"></div>
