--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700,800|Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="huebee.css">
 </head>
-<body ng-app="app" ng-controller="MyController as vm" id="body">
+<body ng-app="app" ng-controller="MyController as vm" id="">
     <div class="flexv">
         <div class="header">MHW Speedrun Thumbnail Generator</div>
         <div class="spacer"></div>
@@ -35,7 +35,8 @@
             </div>
         </div>
         <div class="spacer"></div>
-        <div class="mauto"><button ng-click="vm.download()">Download</button></div>
+        <div class="mauto"><button ng-click="vm.download()">Generate and download image</button></div>
+        <div class="mauto">Warning: image download does not work properly for Chrome. Please take a screenshot instead.</div>
         <div class="spacer"></div>
         <div class="mauto config-row flexh">
             <div>Weapon</div>
