--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="spacer"></div>
         <div class="mauto"><button ng-click="vm.download()">Generate and download image</button></div>
-        <div class="mauto">Warning: image download does not work properly for Chrome. Please take a screenshot instead.</div>
+        <div class="mauto smallertext">Warning: image download does not work properly for Chrome. Please take a screenshot instead.</div>
         <div class="spacer"></div>
         <div class="mauto config-row flexh">
             <div>Weapon</div>
