adding AT color

--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -131,10 +131,11 @@
                 <option value="1">White</option>
                 <option value="2">Green</option>
                 <option value="3">Purple</option>
-                <option value="4">Custom</option>
+                <option value="4">Orange</option>
+                <option value="5">Custom</option>
             </select>
             <div class="hspacerxsm"></div>
-            <input class="outline-color-input" ng-show="vm.selectedOutlineType == 4" ng-model="vm.outlineCustomColor" data-huebee />
+            <input class="outline-color-input" ng-show="vm.selectedOutlineType == 5" ng-model="vm.outlineCustomColor" data-huebee />
         </div>
         <div class="spacer"></div>
         <div class="flex1"></div>
